# releaseflow-bomops

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial.py
backend/app/: __init__.py  main.py
backend/app/api/: routes.py
backend/app/core/: config.py  enums.py
backend/app/db/: seed.py  session.py
backend/app/models/: entities.py
backend/app/schemas/: api.py
backend/app/services/: __init__.py  workflow.py
backend/tests/: conftest.py
backend/tests/integration/: test_api.py
backend/tests/unit/: test_validation_rules.py  test_workflow.py
data/seeds/: README.md
data/source_templates/: README.md
data/synthetic_documents/: engineering-change-order.md  release-approval-memo.md  supplier-package-change.md
docs/: architecture.md  data-model.md  demo-script.md  governance.md  screenshot-guide.md  threat-model.md  validation-rules.md
frontend/: Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/e2e/: workflows.spec.ts
frontend/src/: App.test.tsx  App.tsx  main.tsx  styles.css
frontend/src/lib/: api.ts
frontend/src/types/: index.ts
scripts/: generate_synthetic_documents.py  replay_case.py  seed_demo.py
